--- a/main.html
+++ b/main.html
@@ -8,6 +8,47 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div data-ns-test="block-inline-button">
+        <button>Inline</button>
+        <button>Inline</button>
+    </div>
+    <div data-ns-test="block-inline-div">
+        <div>Block</div>
+        <div>Block</div>
+    </div>
+    <div data-ns-test="block-inline-span">
+        <span>Inline</span>
+        <span>Inline</span>
+    </div>
+    <div data-ns-test="block-inline-p">
+        <p>Block</p>
+        <p>Block</p>
+    </div>
+    <div data-ns-test="block-inline-input">
+        <input type="text">
+        <input type="text">
+
+    </div>
+    <div data-ns-test="block-inline-cite">
+        <cite>Inline</cite>
+        <cite>Inline</cite>
+    </div>
+    <div data-ns-test="block-inline-code">
+        <code>Inline</code>
+        <code>Inline</code>
+    </div>
+    <div data-ns-test="block-inline-h1">
+        <h1>Block</h1>
+        <h1>Block</h1>
+    </div>
+    <div data-ns-test="block-inline-sup">
+        <sup>Inline</sup>
+        <sup>Inline</sup>
+    </div>
+    <div data-ns-test="block-inline-sub">
+        <sub>Inline</sub>
+        <sub>Inline</sub>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
