--- a/main.html
+++ b/main.html
@@ -8,47 +8,48 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div data-ns-test="block-inline-button">
-        <button>Inline</button>
-        <button>Inline</button>
-    </div>
-    <div data-ns-test="block-inline-div">
-        <div>Block</div>
-        <div>Block</div>
-    </div>
-    <div data-ns-test="block-inline-span">
-        <span>Inline</span>
-        <span>Inline</span>
-    </div>
-    <div data-ns-test="block-inline-p">
-        <p>Block</p>
-        <p>Block</p>
-    </div>
-    <div data-ns-test="block-inline-input">
-        <input type="text">
-        <input type="text">
-
-    </div>
-    <div data-ns-test="block-inline-cite">
-        <cite>Inline</cite>
-        <cite>Inline</cite>
-    </div>
-    <div data-ns-test="block-inline-code">
-        <code>Inline</code>
-        <code>Inline</code>
-    </div>
-    <div data-ns-test="block-inline-h1">
-        <h1>Block</h1>
-        <h1>Block</h1>
-    </div>
-    <div data-ns-test="block-inline-sup">
-        <sup>Inline</sup>
-        <sup>Inline</sup>
-    </div>
-    <div data-ns-test="block-inline-sub">
-        <sub>Inline</sub>
-        <sub>Inline</sub>
-    </div>
+	<div class="block-or-inline-elements">
+  <div data-ns-test="block-inline-button">
+    <button>Test1</button>
+    <button>Test2</button>
+  </div>
+  <div data-ns-test="block-inline-div">
+    <div>Test1</div>
+    <div>Test2</div>
+  </div>
+  <div data-ns-test="block-inline-span">
+    <span>Test1</span>
+    <span>Test2</span>
+  </div>
+  <div data-ns-test="block-inline-p">
+    <p>Test1</p>
+    <p>Test2</p>
+  </div>
+  <div data-ns-test="block-inline-input">
+    <input type="text" value="Test1">
+    <input type="text" value="Test2">
+  </div>
+  <div data-ns-test="block-inline-cite">
+    <cite>Test1</cite>
+    <cite>Test2</cite>
+  </div>
+  <div data-ns-test="block-inline-code">
+    <code>Test1</code>
+    <code>Test2</code>
+  </div>
+  <div data-ns-test="block-inline-h1">
+    <h1>Test1</h1>
+    <h1>Test2</h1>
+  </div>
+  <div data-ns-test="block-inline-sup">
+    <sup>Test1</sup>
+    <sup>Test2</sup>
+  </div>
+  <div data-ns-test="block-inline-sub">
+    <sub>Test1</sub>
+    <sub>Test2</sub>
+  </div>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
